Support eq/gt/lt label and property pushdown for adjacency sindexes