@@ -495,8 +495,8 @@ public class FireflyVertex extends FireflyElement implements Vertex {
     @Override
     public void remove() {
         // Collect edges in both directions and remove them all.
-        final List<FireflyEdge> inEdges = FireflyEdge.readEdges(graph, getEdgeIdsFromVertex(Direction.IN, Set.of()));
-        final List<FireflyEdge> outEdges = FireflyEdge.readEdges(graph, getEdgeIdsFromVertex(Direction.OUT, Set.of()));
+        final List<FireflyEdge> inEdges = FireflyEdge.readEdges(graph, getEdgeIdsFromVertex(Direction.IN, Collections.emptySet(), Collections.emptyList()));
+        final List<FireflyEdge> outEdges = FireflyEdge.readEdges(graph, getEdgeIdsFromVertex(Direction.OUT, Collections.emptySet(), Collections.emptyList()));
         // Remove the edges themselves and from the adjacent vertices' edge caches.
         inEdges.forEach(FireflyEdge::removeSelfAndFromOut);
         outEdges.forEach(FireflyEdge::removeSelfAndFromIn);
@@ -520,13 +520,14 @@ public class FireflyVertex extends FireflyElement implements Vertex {
      * @param direction Direction to get edge ids for.
      * @return Iterator of all edge ids.
      */
-    public List<FireflyId> getEdgeIdsFromVertex(final Direction direction, final Set<String> labels) {
+    public List<FireflyId> getEdgeIdsFromVertex(final Direction direction, final Set<String> labels,
+                                                final List<HasContainer> hasContainers) {
         LOG.trace("Getting edge ids from vertex {}.", id);
         final List<FireflyId> edgeIds = new ArrayList<>();
 
         edgeIds.addAll(getCachedEdgeIds(direction, labels));
         if (isEdgeCacheOverflowed) {
-            edgeIds.addAll(getSupernodeEdgeIds(direction, labels));
+            edgeIds.addAll(getSupernodeEdgeIds(direction, labels, hasContainers));
         }
 
         return edgeIds;
@@ -555,8 +556,9 @@ public class FireflyVertex extends FireflyElement implements Vertex {
      * Important note about this function: It only returns ids that are NOT cached in the vertex.
      * To get an exhaustive list of all ids you must call this in conjunction with getCachedEdgeIds.
      */
-    private List<FireflyId> getSupernodeEdgeIds(final Direction direction, final Set<String> labels) {
-        return getSupernodeIds(direction, labels, FireflyPhatEdgeIdIteratorFromVertex.OutputType.EDGE_ID);
+    private List<FireflyId> getSupernodeEdgeIds(final Direction direction, final Set<String> labels,
+                                                final List<HasContainer> hasContainers) {
+        return getSupernodeIds(direction, labels, FireflyPhatEdgeIdIteratorFromVertex.OutputType.EDGE_ID, hasContainers);
     }
 
     /**
@@ -564,7 +566,7 @@ public class FireflyVertex extends FireflyElement implements Vertex {
      * To get an exhaustive list of all ids you must call this in conjunction with getSupernodeVertexIds.
      */
     private List<FireflyId> getSupernodeVertexIds(final Direction direction, final Set<String> labels) {
-        return getSupernodeIds(direction, labels, FireflyPhatEdgeIdIteratorFromVertex.OutputType.VERTEX_ID);
+        return getSupernodeIds(direction, labels, FireflyPhatEdgeIdIteratorFromVertex.OutputType.VERTEX_ID, Collections.emptyList());
     }
 
     /**
@@ -591,14 +593,15 @@ public class FireflyVertex extends FireflyElement implements Vertex {
 
     public List<FireflyId> getSupernodeIds(final Direction direction,
                                            final Set<String> labels,
-                                           final FireflyPhatEdgeIdIteratorFromVertex.OutputType outputType) {
+                                           final FireflyPhatEdgeIdIteratorFromVertex.OutputType outputType,
+                                           final List<HasContainer> hasContainers) {
         if (!this.isEdgeCacheOverflowed) {
             return Collections.emptyList();
         }
 
         LOG.trace("Getting supernode edge ids from vertex {}.", id);
         final List<FireflyId> ids = new ArrayList<>();
-        final Iterator<FireflyId> idIterator = getIdsFromVertexByIndex(direction, labels, outputType);
+        final Iterator<FireflyId> idIterator = getIdsFromVertexByIndex(direction, labels, outputType, hasContainers);
         while (idIterator.hasNext()) {
             try {
                 ids.add(idIterator.next());
@@ -819,25 +822,51 @@ public class FireflyVertex extends FireflyElement implements Vertex {
 
     protected Iterator<FireflyId> getIdsFromVertexByIndex(final Direction direction,
                                                           final Set<String> labels,
-                                                          final FireflyPhatEdgeIdIteratorFromVertex.OutputType outputType) {
+                                                          final FireflyPhatEdgeIdIteratorFromVertex.OutputType outputType,
+                                                          final List<HasContainer> hasContainers) {
+        if (direction == Direction.BOTH) {
+            final Iterator<KeyRecord> inKeyRecordIterator = getEdgeKeyRecordsByIndex(Direction.IN, labels, outputType, hasContainers);
+            final Iterator<KeyRecord> outKeyRecordIterator = getEdgeKeyRecordsByIndex(Direction.OUT, labels, outputType, hasContainers);
+            return FireflyCloseableIteratorUtils.concat(new FireflyPhatEdgeIdIteratorFromIndexedVertex(inKeyRecordIterator, this.db, direction, this.id, labels, outputType),
+                    new FireflyPhatEdgeIdIteratorFromIndexedVertex(outKeyRecordIterator, this.db, direction, this.id, labels, outputType));
+        } else {
+            final Iterator<KeyRecord> keyRecordIterator = getEdgeKeyRecordsByIndex(direction, labels, outputType, hasContainers);
+            return new FireflyPhatEdgeIdIteratorFromIndexedVertex(keyRecordIterator, this.db, direction, this.id, labels, outputType);
+        }
+    }
+
+    /**
+     * Get the KeyRecord iterator for Edges attached to this Vertex. Public only for testing purposes.
+     * @param direction
+     * @param labels
+     * @param outputType
+     * @param hasContainers
+     * @return KeyRecord iterator for Edges attached to this Vertex.
+     */
+    public Iterator<KeyRecord> getEdgeKeyRecordsByIndex(final Direction direction,
+                                                        final Set<String> labels,
+                                                        final FireflyPhatEdgeIdIteratorFromVertex.OutputType outputType,
+                                                        final List<HasContainer> hasContainers) {
+        if (outputType == FireflyPhatEdgeIdIteratorFromVertex.OutputType.VERTEX_ID && !hasContainers.isEmpty()) {
+            // This should never happen.
+            throw new IllegalStateException("Pushdown filters are not supported for composite ID edge skipping.");
+        }
         final QueryPolicy queryPolicy = new QueryPolicy();
         queryPolicy.sendKey = true;
         queryPolicy.includeBinData = true;
-        final Iterator<KeyRecord> keyRecordIterator;
+        queryPolicy.filterExp = GraphQueryHelper.phatEdgeHasContainerListToExpression(db, hasContainers, labels, id.getKeyHashString());
         if (direction == Direction.OUT) {
-            keyRecordIterator = GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_OUT_INDEX_NAME, Filter.contains(db.SUPERNODES_OUT_BIN,
-                    IndexCollectionType.MAPVALUES, id.getKeyHashString()), queryPolicy);
+            return GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_OUT_INDEX_NAME,
+                    Filter.contains(db.SUPERNODES_OUT_BIN, IndexCollectionType.MAPVALUES, id.getKeyHashString()),
+                    queryPolicy);
         } else if (direction == Direction.IN) {
-            keyRecordIterator = GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_IN_INDEX_NAME, Filter.contains(db.SUPERNODES_IN_BIN,
-                    IndexCollectionType.MAPVALUES, id.getKeyHashString()), queryPolicy);
+            return GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_IN_INDEX_NAME,
+                    Filter.contains(db.SUPERNODES_IN_BIN, IndexCollectionType.MAPVALUES, id.getKeyHashString()),
+                    queryPolicy);
         } else {
-            return FireflyCloseableIteratorUtils.concat(
-                    new FireflyPhatEdgeIdIteratorFromIndexedVertex(GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_OUT_INDEX_NAME, Filter.contains(db.SUPERNODES_OUT_BIN,
-                            IndexCollectionType.MAPVALUES, id.getKeyHashString()), queryPolicy), this.db, Direction.OUT, this.id, labels, outputType),
-                    new FireflyPhatEdgeIdIteratorFromIndexedVertex(GraphQuery.create(graph).querySIndex(db.EDGE_AERO_SET, db.E_IN_INDEX_NAME, Filter.contains(db.SUPERNODES_IN_BIN,
-                            IndexCollectionType.MAPVALUES, id.getKeyHashString()), queryPolicy), this.db, Direction.IN, this.id, labels, outputType));
+            // This should never happen since this method is not invoked with BOTH.
+            throw new RuntimeException("Can not query adjacency index with Direction BOTH.");
         }
-        return new FireflyPhatEdgeIdIteratorFromIndexedVertex(keyRecordIterator, this.db, direction, this.id, labels, outputType);
     }
 
     public long getEdgeCount(final Direction direction) {
@@ -849,7 +878,7 @@ public class FireflyVertex extends FireflyElement implements Vertex {
 
         final long baseCount = getCachedEdgeCount(direction);
         return this.isEdgeCacheOverflowed ?
-                baseCount + FireflyCloseableIteratorUtils.count(getSupernodeEdgeIds(direction, Set.of())) :
+                baseCount + FireflyCloseableIteratorUtils.count(getSupernodeEdgeIds(direction, Set.of(), Collections.emptyList())) :
                 baseCount;
     }
 
